--- a/css/index.css
+++ b/css/index.css
@@ -34,6 +34,9 @@ html,body{
     height: 80px;
 
 }
+.header a{
+    text-decoration: none;
+}
 .img-header img{
     width: 40px;
     margin: 20px;
@@ -48,6 +51,7 @@ html,body{
     color: var(--color-white);
     margin: 10px 70px 0 70px;
     text-decoration: none;
+    
     
 
 }
@@ -224,6 +228,11 @@ height: 40px;
     padding: 15px;
     cursor: pointer;
     box-shadow: 9px 6px 17px -4px rgba(0,0,0,0.75);
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 
 }
 .img-prod img{
@@ -235,53 +244,83 @@ height: 40px;
 .incolor-pom img{
     margin-bottom: -20px;
 }
-.black-pom img{
-margin-top: -25px;
-margin-left: 25px;
-}
-.gel img{
-    height: 170px;
-    width: 200px;
-    margin-top: 35px;
-    margin-left: 30px;
-}
-.esponja img{
-    width: 150px;
-    height: 180px;
-    margin-top: 30px;
-    margin-left: 60px;
-}
-.durag{
-    width: 230px;
-    height: 180px;
-    margin-bottom: 30px;
-    margin-left: 10px;
-}
-.text-prod{
-    text-align: center;
+.card-prod:hover{
+    background-color: var(--color-black);
+    transition: 0.5s ease-in-out ;
     
 }
-.text-prod h1{
+.card-prod:hover h1{
+    display: none;
+}
+.card-prod:hover p{
+    font-size: 30px;
     margin-bottom: 15px;
 }
-.text-prod p{
-    color: var(--color-green-3);
-    font-size: 20px;
-    font-weight: 900;
-}
-.btn-produto{
-    width: 40px;
-    height: 40px;
-    background-color: var(--color-green-2);
-    border-radius: 10px;
+.card-prod:hover .add-carrinho-prod{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 30px;
+    color: var(--color-white);
+    margin-bottom: 5px;
+
+}
+.card-prod h1{
+    font-size: 28px;
+    margin-bottom:10px;
+
+}
+.card-prod p{
+    font-size: 25px;
+    font-weight: bold;
+    color: var(--color-green-2);
+}
+.add-carrinho-prod{
+    display: none;
+    background-color: var(--color-green-2);
+    width: 150px;
+    height: 120px;
+    border-radius: 10px;
+
+
+}
+
+.btn-mais{
+border: 2px solid #111;
+border-bottom-left-radius: 5px;
+border-top-left-radius: 5px;
+padding: 5px;
+margin-right: 10px;
+margin-left: -40px;
+}
+.btn-menos{
+    border: 2px solid #111;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+    padding: 5px;
+    margin-left: 10px;
+   
+    }
+    .quantidade-produtos{
+        /* border-top: 2px solid #111;
+        border-bottom: 2px solid #111; */
+        text-align: center;
+
+    }
+
+.btn-produto{
+    margin-right: -30px;
+    margin-left: 20px;
+}
+
+.btn-mais:hover{
+    color: var(--color-green-4);
+
+}
+.btn-menos:hover{
+    color: var(--color-green-4);
 }
 .btn-produto:hover{
-    color:var(--color-white);
-
+    color: var(--color-green-4);
 }
 .contato{
     margin-top: 100px;
